[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-Reuploaded"
version = "1.5.0"
description = "Flexible and efficient upload handling for Flask"
license = {text = "MIT"}
authors = [
    {name = "Matthew \"LeafStorm\" Frazier", email = "leafstormrush@gmail.com"},
]
maintainers = [
    {name = "Jürgen Gmach", email = "juergen.gmach@googlemail.com"},
]
requires-python = ">= 3.10"
dynamic = ["readme"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Flask",
]
dependencies = [
    "Flask>=1.0.4",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Source = "https://github.com/jugmac00/flask-reuploaded"
"Issue Tracker" = "https://github.com/jugmac00/flask-reuploaded/issues"
Documentation = "https://flask-reuploaded.readthedocs.io/en/latest/"

[tool.setuptools]
zip-safe = false
platforms = ["any"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"], content-type = "text/x-rst"}
